--- a/main.css
+++ b/main.css
@@ -2,6 +2,45 @@
 
 body{
     font-family: 'Roboto', sans-serif;
+    margin: 0;
+}
+
+header{
+display: flex;
+flex-direction: column;
+}
+
+/* Navigation */
+
+.navbar ul {
+	display: flex;
+	justify-content: center;
+	padding: 5px;
+	
+	margin: 0;
+	list-style-type: none;
+	background-color: #000119;
+	width: auto;
+}
+
+.navbar ul li {
+	display: flex;
+	
+}
+.navbar li a {
+	display: flex;
+	color: #fff;
+	text-decoration: none;
+	text-transform: uppercase;
+	padding: 12px 20px;
+	font-size: 1rem;
+	color: #fff;
+	letter-spacing: 1px;
+	text-align: center;
+}
+ .navbar li a:hover {
+  background-color: #01648f;
+  color: black;
 }
 
 h2{
@@ -13,6 +52,7 @@ section{
     flex-direction: row;
     justify-content: center;
     margin-bottom: 2rem;
+    margin-top: 2rem;
 }
 
 .left-side, .right-side{
@@ -21,23 +61,24 @@ section{
 }
 
 .left-side{
-   border: 1px solid black;
+   border: 1px solid black; 
     width: 20rem;
 }
 
 .right-side{
-   margin-left: 3rem;
+   margin-left: 3rem;  
     width: 30rem;
 }
 
 .character-img{
-    width: 10rem;
+    margin-top: 1rem;
+    width: 13rem;
     margin-left: auto;
     margin-right: auto;
 }
 
 h4{
-   text-transform: capitalize;
+   text-transform: capitalize; 
 }
 
 .left-side h4 {
@@ -48,4 +89,27 @@ p {
     color: grey;
     margin-left: 0.5rem;
     margin-right: 0.5rem;
+}
+
+
+.footer-img{
+    opacity: 0.7;
+}
+
+footer {
+    /*background: #000119;*/
+    
+    width: 100%;
+    height: auto;
+   display: flex;
+    flex-direction: column;
+}	
+
+.footer-text{
+    color: white;
+    position: absolute;
+    background-image: url(footer.jpg);
+    width: 100%;
+    height: 15%;
+    margin-bottom: 0;
 }
